--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/postcss": "^4.0.8",
         "@tailwindcss/typography": "^0.5.10",
-        "autoprefixer": "^10.4.16",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
+        "tailwindcss": "^4.0.8",
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.0.8",
         "flowbite": "^3.1.2",
         "remixicon": "^4.6.0"
     }
